--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -3,69 +3,65 @@
 
 {% is_allowed user as has_access %}
 
-{#<div class="fixed-top crdc-nav">#}
-{#    <a target="_blank" rel="noopener noreferrer" href="https://datacommons.cancer.gov/">NCI Cancer Research Data#}
-{#        Commons</a>#}
-{#</div>#}
-{#<nav class="navbar navbar-expand-md fixed-top crdc-nav">#}
-{#    Home#}
-{#About the Project#}
-{#For Researchers#}
-{#Resources#}
-{#Latest News#}
-{#Contact Us#}
-{#    <a href="{% url 'landing_page' %}" title="Home Page" >#}
-{#        <img class="navbar-brand" style="height:25px;" src="{% static 'img/ctb-logo.jpeg' %}" alt="CTB Logo"/>#}
-{#    </a>#}
-{#</nav>#}
 <nav id="ctb-main-navbar" class="navbar navbar-expand-lg fixed-top navbar-dark" aria-label="Main navigation">
     <div class="container">
         <a class="navbar-brand" href="{% url 'landing_page' %}">Chernobyl Tissue Bank</a>
-        <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" data-bs-toggle="collapse" data-bs-target="#ctb-collapsible-navbar"
+        <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" data-bs-toggle="collapse"
+                data-bs-target="#ctb-collapsible-navbar"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="ctb-collapsible-navbar">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link {% if 'search_facility' in request.path %} active {% endif %}" aria-current="page" href="{% url 'account_login' %}">CTB Biosample Search Facility</a>
+                    <a class="nav-link {% if 'search_facility' in request.path %} active {% endif %}"
+                       aria-current="page" href="{% url 'account_login' %}">CTB Biosample Search Facility</a>
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle {% if 'about/' in request.path %} active {% endif %}" id="dropdown-about" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle {% if 'about/' in request.path %} active {% endif %}"
+                       id="dropdown-about" data-bs-toggle="dropdown"
                        aria-expanded="false" role="button">About</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown-about">
                         <li><a class="dropdown-item" href="{% url 'about_project' %}">About the Project</a></li>
                         <li><a class="dropdown-item" href="{% url 'aims_page' %}">Aims of the Project</a></li>
                         <li><a class="dropdown-item" href="{% url 'fact_sheet' %}">Fact Sheet</a></li>
-                        <li><a class="dropdown-item" href="{% url 'management_page' %}">Management of the Project</a></li>
+                        <li><a class="dropdown-item" href="{% url 'management_page' %}">Management of the Project</a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle {% if 'researchers/' in request.path %} active {% endif %}" id="dropdown-researchers" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle {% if 'researchers/' in request.path %} active {% endif %}"
+                       id="dropdown-researchers" data-bs-toggle="dropdown"
                        aria-expanded="false">Research</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown-researchers">
                         <li><a class="dropdown-item" href="{% url 'researchers_page' %}">For Researchers</a></li>
                         <li><a class="dropdown-item" href="{% url 'access_to_materials' %}">Access to Materials</a></li>
-                        <li><a class="dropdown-item" href="{% url 'research_projects' %}">Research Projects Using CTB Materials</a></li>
+                        <li><a class="dropdown-item" href="{% url 'research_projects' %}">Research Projects Using CTB
+                            Materials</a></li>
                         <li><a class="dropdown-item" href="{% url 'material_available' %}">Material Available</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle {% if 'resources/' in request.path %} active {% endif %}" id="dropdown-resources" data-bs-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle {% if 'resources/' in request.path %} active {% endif %}"
+                       id="dropdown-resources" data-bs-toggle="dropdown"
                        aria-expanded="false">Resources</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown-resources">
-                        <li><a class="dropdown-item" href="{% url 'bibliography' %}">Publications using CTB Samples and Data</a></li>
+                        <li><a class="dropdown-item" href="{% url 'bibliography' %}">Publications using CTB Samples and
+                            Data</a></li>
                         <li><a class="dropdown-item" href="{% url 'useful_links' %}">Useful External Links</a></li>
-                        <li><a class="dropdown-item" href="{% url 'podcasts_and_videos' %}">Useful Podcasts and Videos</a></li>
+                        <li><a class="dropdown-item" href="{% url 'podcasts_and_videos' %}">Useful Podcasts and
+                            Videos</a></li>
                     </ul>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link {% if 'news/' in request.path %} active {% endif %}" href="{% url 'news' %}">Latest News</a>
+                    <a class="nav-link {% if 'news/' in request.path %} active {% endif %}" href="{% url 'news' %}">Latest
+                        News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if 'contact/' in request.path %} active {% endif %}" href="{% url 'contact' %}">Contact Us</a>
+                    <a class="nav-link {% if 'contact/' in request.path %} active {% endif %}"
+                       href="{% url 'contact' %}">Contact Us</a>
                 </li>
             </ul>
             <ul class="navbar-nav ms-auto">
@@ -87,39 +83,42 @@
                                    title="Sign Out">Sign Out <i class="fa fa-solid fa-sign-out"></i>
                                 </a>
                             </li>
-{#                            <li class="nav-item">#}
-{#                                <a href="#logout-modal" class="dropdown-item" data-bs-toggle="modal"#}
-{#                                   data-bs-target="#logout-modal"#}
-{#                                   title="Sign Out">#}
-{#                                    Sign Out <i class="fa fa-solid fa-sign-out"></i>#}
-{#                                </a>#}
-{#                            </li>#}
+                            {#                            <li class="nav-item">#}
+                            {#                                <a href="#logout-modal" class="dropdown-item" data-bs-toggle="modal"#}
+                            {#                                   data-bs-target="#logout-modal"#}
+                            {#                                   title="Sign Out">#}
+                            {#                                    Sign Out <i class="fa fa-solid fa-sign-out"></i>#}
+                            {#                                </a>#}
+                            {#                            </li>#}
                         </ul>
                     </li>
-{#                    <li class="nav-item">#}
-{#                        <a href="#logout-modal" class="nav-link" data-bs-toggle="modal" data-bs-target="#logout-modal"#}
-{#                           title="Sign Out">#}
-{#                            Sign Out <i class="fa fa-solid fa-sign-out"></i>#}
-{#                        </a>#}
-{#                    </li>#}
+                    {#                    <li class="nav-item">#}
+                    {#                        <a href="#logout-modal" class="nav-link" data-bs-toggle="modal" data-bs-target="#logout-modal"#}
+                    {#                           title="Sign Out">#}
+                    {#                            Sign Out <i class="fa fa-solid fa-sign-out"></i>#}
+                    {#                        </a>#}
+                    {#                    </li>#}
                 {% endif %}
             </ul>
         </div>
     </div>
 </nav>
 {% if 'login' in request.path or 'search_facility/' in request.path %}
-    <div id="ctb-secondary-navbar" class="nav-scroller bg-body shadow-sm">
+    <div id="ctb-secondary-navbar" class="bg-body shadow-sm">
         <div class="container">
             <nav class="nav navbar-ctb" aria-label="Secondary navigation">
                 <div title="Home Page">
                     <img class="navbar-brand" src="{% static 'img/ctb-biosample-logo.svg' %}" alt="NIH CTB Logo"/>
                 </div>
                 {% if user.is_authenticated %}
-                <a class="nav-link {% if 'dashboard/' in request.path %} active {% endif %}" href="{% url 'dashboard' %}">
-                    Dashboard
-                </a>
-                <a class="nav-link {% if 'search_tissue_samples/' in request.path %} active {% endif %}" href="{% url 'search_tissue_samples' %}">Search Tissue Samples</a>
-                <a class="nav-link {% if 'saved_searches/' in request.path %} active {% endif %}" href="{% url 'saved_searches' %}">My Saved Searches</a>
+                    <a class="nav-link {% if 'dashboard/' in request.path %} active {% endif %}"
+                       href="{% url 'dashboard' %}">
+                        Dashboard
+                    </a>
+                    <a class="nav-link {% if 'search_tissue_samples/' in request.path or '_search_facility' in request.path %} active {% endif %}"
+                       href="{% url 'search_tissue_samples' %}">Search Tissue Samples</a>
+                    <a class="nav-link {% if 'saved_searches/' in request.path %} active {% endif %}"
+                       href="{% url 'saved_searches' %}">My Saved Searches</a>
 
                 {% endif %}
             </nav>
@@ -127,84 +126,3 @@
         </div>
     </div>
 {% endif %}
-{#<nav class="navbar navbar-expand-md fixed-top top-30-px navbar-ctb">#}
-{##}
-{#    <div class="container">#}
-{##}
-{#        <a href="{% url 'landing_page' %}" title="Home Page" >#}
-{#            <img class="navbar-brand" src="{% static 'img/ctb-biosample-logo.svg' %}" alt="NIH CTB Logo"/>#}
-{#        </a>#}
-{#        <button class="navbar-toggler collapsed " type="button" data-bs-toggle="collapse"#}
-{#                data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"#}
-{#                aria-label="Toggle navigation">#}
-{#            <span class="navbar-toggler-icon"></span>#}
-{#        </button>#}
-{#        <div class="navbar-collapse collapse" id="navbarCollapse">#}
-{#            <ul class="navbar-nav justify-content-evenly">#}
-{#                <li class="nav-item mx-xl-1 mx-xxl-2">#}
-{#                    <a class="nav-link" href="https://www.chernobyltissuebank.com/bibliography.htm" target="_blank" rel="noopener"#}
-{#                       title="See CTB Publications">Publications</a>#}
-{#                </li>#}
-{#                <li class="nav-item mx-xl-1 mx-xxl-3">#}
-{#                    <a class="nav-link" href="https://www.chernobyltissuebank.com" target="_blank" rel="noopener"#}
-{#                       title="Back to Chernobyl Tissue Bank Website">Chernobyl Tissue Bank</a>#}
-{#                </li>#}
-{#                {% if request.user.is_authenticated %}#}
-{#                <li class="nav-item mx-xl-1 mx-xxl-3">#}
-{#                    <a class="nav-link{% if 'search' in request.path %} active{% endif %}" href="{% url 'search' %}"#}
-{#                       title="Search the Biobank">Dashboard</a>#}
-{#                </li>#}
-{##}
-{#                <li class="nav-item mx-xl-1 mx-xxl-3">#}
-{#                    <a class="nav-link{% if 'search' in request.path %} active{% endif %}" href="{% url 'search' %}"#}
-{#                       title="Search the Biobank">My Saved Searches</a>#}
-{#                </li>#}
-{#                {% endif %}#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link{% if 'search' in request.path %} active{% endif %}" href="{% url 'search' %}"#}
-{#                       title="Search the Biobank"><i class="fa-solid fa-magnifying-glass"#}
-{#                    ></i> Search</a>#}
-{#                </li>#}
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link external-link" href="" url="https://learn.canceridc.dev"#}
-{#                       data-bs-toggle="modal" data-bs-target="#external-web-warning">#}
-{#                        <i class="fa-solid fa-book"></i> Documentation#}
-{#                        <i class="fa-solid fa-external-link external-link-icon" aria-hidden="true"></i>#}
-{#                    </a>#}
-{#                </li>#}
-{#            </ul>#}
-{#            <ul class="navbar-nav ms-auto">#}
-{#                {% if user.is_authenticated %}#}
-{#                <li id="user-login" class="nav-item navbar-signin">#}
-{#                    <div class="dropdown">#}
-{#                        <a class="avatar-link" href="{% url 'user_detail' user.id %}">#}
-{#                            {% with avatar_url=user.socialaccount_set.all.0.get_avatar_url %}#}
-{#                                {% if avatar_url %}#}
-{#                                    <img src="{{ user.socialaccount_set.all.0.get_avatar_url }}" width="40" height="40" alt="Avatar Link to User Details">#}
-{#                                {% else %}#}
-{#                                    <i class="fa-solid fa-user basic-avatar"> </i>#}
-{#                                {% endif %}#}
-{#                            {% endwith %}#}
-{#                        </a>#}
-{#                        <a role="button" class="dropdown-toggle" id="user-dropdown" data-bs-toggle="dropdown" aria-label="User Dropdown" aria-expanded="false">#}
-{#                            {{ user.first_name }}#}
-{#                        </a>#}
-{#                        <ul class="dropdown-menu dropdown-menu-end" role="menu" aria-label="user-dropdown">#}
-{#                            {% if has_access %}<li class="dropdown-item"><a href="{% url 'user_detail' user.id %}">Account Details <i class="fa-solid fa-cog"></i></a></li>{% endif %}#}
-{#                            <li class="dropdown-item"><a href="#logout-modal" data-bs-toggle="modal" data-bs-target="#logout-modal" title="Sign Out">Sign Out <i class="fa-solid fa-sign-out"></i></a></li>#}
-{#                        </ul>#}
-{#                    </div>#}
-{#                </li>#}
-{#            {% else %}#}
-{#                <li class="nav-item navbar-signin dropdown">#}
-{#                    <a id="sign-in-dropdown"#}
-{#                       href="{% url 'account_login' %}" title="Sign In"><i class="fa fa-solid fa-sign-in"></i>#}
-{#                        Sign In</a>#}
-{#                </li>#}
-{#            {% endif %}#}
-{#            </ul>#}
-{#        </div>#}
-{#    </div>#}
-{##}
-{#</nav>#}
-
