--- a/templates/ctb/clinical_search_facility.html
+++ b/templates/ctb/clinical_search_facility.html
@@ -23,14 +23,13 @@
             </nav>
         </div>
     </div>
-
 {% endblock %}
 
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-8 mb-3">
-                <div class="border bg-light rounded p-3">
+            <div class="col-lg-8 mb-3">
+                <div class="border bg-light rounded p-4">
                     <div class="content-header d-flex flex-wrap justify-content-between">
                         <h5>Clinical Search Facility</h5>
                         <a id="clinic-skip" class="btn btn-outline-secondary d-none" href="#">
@@ -38,21 +37,18 @@
                             <i class="fa-solid fa-angles-right"></i>
                         </a>
                     </div>
-
-
                     <form method="POST" id="form-clinic" action="{% url 'clinical_search_facility_result' %}"
                           autofill="off">
                         {% csrf_token %}
-
                         <input type="hidden" name="patientresidency" value="both">
                         <input type="hidden" name="patientgender" value="both">
                         <input type="hidden" name="ageatoperation" value="0,49">
                         <input type="hidden" name="ageatexposure" value="-40,19">
 
-                        <div>
+                        <div class="py-2">
                             <fieldset id="form-clinic-0">
                                 <div>
-                                    <h6>General Information</h6>
+                                    <h6><strong>General Information</strong></h6>
                                 </div>
                                 <div class="fw-light">The clinical search facility is only for use in projects that are
                                     requesting
@@ -80,58 +76,55 @@
                             </fieldset>
                             <fieldset id="form-clinic-1" class="d-none">
                                 <div>
-                                    <h6>Operation Type</h6>
+                                    <h6><strong>Operation Type</strong></h6>
                                 </div>
                                 <div>There are two categories for operation type:</div>
                                 <hr>
-                                <div class="row mx-1 mb-3">
-                                    <div class="col border rounded-2 p-2 mx-1">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="op-type"
-                                                   id="optype-total" value="total">
-                                            <label class="form-check-label" for="optype-total">
-                                                Total Thyroidectomy<br>
-                                                <span class="text-muted fw-light">Where all of the thyroid gland is removed.</span>
-                                            </label>
-                                        </div>
+                                <div class="border rounded-2 p-2 m-1">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="op-type"
+                                               id="optype-total" value="total">
+                                        <label class="form-check-label" for="optype-total">
+                                            Total Thyroidectomy<br>
+                                            <span class="text-muted fw-light">Where all of the thyroid gland is removed.</span>
+                                        </label>
                                     </div>
-
-                                    <div class="col border rounded-2 p-2 mx-1">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="op-type"
-                                                   id="optype-ltotal" value="ltotal">
-                                            <label class="form-check-label" for="optype-ltotal">
-                                                Less Than Total Thyroidectomy<br>
-                                                <span class="text-muted fw-light">Where only the area of the thyroid gland that contains the
+                                </div>
+                                <div class="border rounded-2 p-2 m-1">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="op-type"
+                                               id="optype-ltotal" value="ltotal">
+                                        <label class="form-check-label" for="optype-ltotal">
+                                            Less Than Total Thyroidectomy<br>
+                                            <span class="text-muted fw-light">Where only the area of the thyroid gland that contains the
                                                             tumour is removed.</span>
-                                            </label>
-                                        </div>
-                                    </div>
-
-                                    <div class="col border rounded-2 p-2 mx-1">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="op-type"
-                                                   id="optype-any" value="any">
-                                            <label class="form-check-label" for="optype-any">
-                                                Any Thyroidectomy<br>
-                                                <span class="text-muted fw-light">Includes both total and less than total thyroidectomy.</span>
-                                            </label>
-                                        </div>
+                                        </label>
                                     </div>
                                 </div>
 
-                                <div class="mb-2">The selection criteria is set to any operation type, so if
+                                <div class="border rounded-2 p-2 m-1">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="op-type"
+                                               id="optype-any" value="any">
+                                        <label class="form-check-label" for="optype-any">
+                                            Any Thyroidectomy<br>
+                                            <span class="text-muted fw-light">Includes both total and less than total thyroidectomy.</span>
+                                        </label>
+                                    </div>
+                                </div>
+
+                                <div class="my-2 fw-light">The selection criteria is set to any operation type, so if
                                     you wish set this category to total or less than total, please select this box –
                                     you may select only one.
                                 </div>
 
-                                <div class="mb-2"><strong>If you do not wish to refine your research with
+                                <div class="my-2"><strong>If you do not wish to refine your research with
                                     information on operation type, please leave this section blank and continue to
                                     the next section.</strong>
                                 </div>
                             </fieldset>
                             <fieldset id="form-clinic-2" class="d-none">
-                                <h6>TNM Status (8th Edition) - <a
+                                <h6><strong>TNM Status (8th Edition)</strong> - <a
                                         href="https://www.pathologyoutlines.com/topic/thyroidstaging.html"
                                         target="_blank">Read more</a></h6>
                                 <p>
@@ -156,7 +149,7 @@
                                             differentiated, Well Differentiated Cancer, Not Otherwise Specified
                                         </strong>
                                     </div>
-                                    <div>
+                                    <div class="my-2">
                                         For all cancer types:
                                     </div>
                                     <div>
@@ -285,8 +278,8 @@
                                                 data-target="#options-pt2">Reset
                                         </button>
                                     </div>
-                                    <div>
-                                        <p>For all cancer types:</p>
+                                    <div class="my-2">
+                                        For all cancer types:
                                     </div>
                                     <div>
                                         <table class="table table-striped">
@@ -420,7 +413,7 @@
                                                 data-target="#options-pt3">Reset
                                         </button>
                                     </div>
-                                    <div>
+                                    <div class="my-2">
                                         This section will enable you to select cancers based on the degree invasion into
                                         local lymph nodes. The categories are as follows:
                                     </div>
@@ -517,7 +510,7 @@
                                 </div>
                             </fieldset>
                             <fieldset id="form-clinic-3" class="d-none">
-                                <h6>AJCC Clinical Stage - <a
+                                <h6><strong>AJCC Clinical Stage</strong> - <a
                                         href="https://www.cancer.org/cancer/thyroid-cancer/detection-diagnosis-staging/staging.html"
                                         target="_blank">Read more</a></h6>
 
@@ -618,11 +611,11 @@
                                         </table>
                                     </div>
                                 </div>
-                                <p class="clinic-note"><strong>If you do not wish to further define your search using
-                                    clinical stage, please leave blank and click next.</strong></p>
+                                <div class="mt-2"><strong>If you do not wish to further define your search using
+                                    clinical stage, please leave blank and click next.</strong></div>
                             </fieldset>
                             <fieldset id="form-clinic-4" class="d-none">
-                                <h6>Treatment and Outcome</h6>
+                                <h6><strong>Treatment and Outcome</strong></h6>
                                 <div>Information on clinical treatment and outcome is still being added for some cases.
                                     Please note that at the present time clinical information is only available on a
                                     proportion of the cases from Ukraine.
@@ -643,8 +636,8 @@
                                         treatment. Further information on treatment (e.g. doses
                                         administered) could be made available on request.
                                     </div>
-                                    <div><strong>If you do not wish to refine your research with
-                                        information on treatment, please select the ‘Neither’
+                                    <div class="mt-2"><strong>If you do not wish to refine your research with
+                                        information on treatment, please select the 'Neither'
                                         option.</strong>
                                     </div>
                                     <div class="mt-2">
@@ -684,8 +677,8 @@
                                         cells. There is conflicting evidence with respect to whether
                                         this has a major effect on outcome.
                                     </div>
-                                    <div><strong>If you do not wish to refine your research with
-                                        information on TSH suppression, please select the ‘Neither’
+                                    <div class="mt-2"><strong>If you do not wish to refine your research with
+                                        information on TSH suppression, please select the 'Neither'
                                         option.</strong>
                                     </div>
                                     <div class="mt-2">
@@ -727,8 +720,8 @@
                                         only for those cases that have suffered a relapse of their
                                         disease.
                                     </div>
-                                    <div><strong>If you do not wish to refine your research with
-                                        information clinical outcome, please select the ‘Neither’
+                                    <div class="mt-2"><strong>If you do not wish to refine your research with
+                                        information clinical outcome, please select the 'Neither'
                                         option.</strong></div>
                                     <div class="mt-2">
                                         <div class="form-check">
@@ -760,23 +753,23 @@
                         <div>
                             <a id="back-btn" class="btn btn-outline-secondary d-none"><i
                                     class="fa-solid fa-chevron-left"></i> Back</a>
-                            <a id="proceed-btn" class="btn btn-primary">Proceed to Refine by Clinical Parameters<i
+                            <a id="proceed-btn" class="btn btn-primary">Proceed to Refine by Clinical Parameters <i
                                     class="fa-solid fa-chevron-right"></i></a>
                             <a id="next-btn" class="btn btn-primary float-end d-none">Next <i
                                     class="fa-solid fa-chevron-right"></i></a>
-                            <button type="submit" id="submit-btn" class="btn btn-primary d-none float-end">View Results and Make
+                            <button type="submit" id="submit-btn" class="btn btn-primary d-none float-end">View Results
+                                and Make
                                 Application <i class="fa-solid fa-chevron-right"></i></button>
                         </div>
                     </form>
                 </div>
             </div>
 
-            <div class="col-4">
-
+            <div class="col-lg-4 mb-3">
                 <div class="border rounded bg-light p-4">
                     <div id="clinic-sidebar" class="d-none">
                         <h6>
-                            Search Progress
+                            <strong>Search Progress</strong>
                         </h6>
                         <hr>
                         <div id="clinical-step-0" class="clinical-step step-active step-done">
