--- a/templates/ctb/filter_saved_searches.html
+++ b/templates/ctb/filter_saved_searches.html
@@ -14,7 +14,7 @@
             <td>{{ saved_search.name }}</td>
             <td>{{ saved_search.type }}</td>
             <td>{{ saved_search.results }} Cases</td>
-            <td>{{ saved_search.proceed }}</td>
+            <td><a href="{% url 'driver_search_facility' %}" class="text-decoration-none">Driver Search <i class="fa-solid fa-angle-right"></i></a></td>
             <td class="text-center"><a href="#"><i class="fa-solid fa-trash-can"></i></a></td>
         </tr>
     {% endfor %}
