--- a/templates/ctb/access_to_materials.html
+++ b/templates/ctb/access_to_materials.html
@@ -35,11 +35,11 @@
         of the participating Eastern European countries (Ukraine and Russia).</p>
     <p>An overview of the application review procedure is provided in the flow diagram below. Details of
         the review procedure and of the criteria on which an application will be evaluated are given in
-        the <span style="text-decoration: underline;"><a href="{% url 'fact_sheet' %}" target="_blank"
-                                                         rel="noopener">Fact Sheet</a></span>.</p>
-    <p><a href="{% url 'schema_review_of_applications' %}"> Schema for review of applications</a></p>
-    <p>Distribution of materials to a Principal Investigator whose project has been approved will be
-        authorised subject to:</p>
+        the <a href="{% url 'fact_sheet' %}" target="_blank"
+                                                         rel="noopener">Fact Sheet</a>.</p>
+    <div class="mt-2"><a href="{% url 'schema_review_of_applications' %}"> Schema for review of applications</a></div>
+    <div class="mt-5">Distribution of materials to a Principal Investigator whose project has been approved will be
+        authorised subject to:</div>
     <ol>
         <li>receipt of a signed agreement from the Principal Investigator to conform to the conditions
             set out in the Material and Data Transfer Agreement;
@@ -48,8 +48,9 @@
             External Review Panel and the availability of the material.
         </li>
     </ol>
-    <p>Each sample of nucleic acid or serum will be identified by a CTB sample number and accompanied by
-        a minimum data set comprising the following information:</p>
+    <div class="mt-5">
+        Each sample of nucleic acid or serum will be identified by a CTB sample number and accompanied by
+        a minimum data set comprising the following information:</div>
     <ul>
         <li>age at accident - complying with HIPAA regulations</li>
         <li>age at operation - complying with HIPAA regulations</li>
@@ -58,7 +59,7 @@
         <li>International Pathology Review Panel diagnosis</li>
         <li>Estimated thyroid radiation dose (if requested by the researcher).</li>
     </ul>
-    <p>If a project requires more clinical information than the minimum data set, this must be stated
+    <p class="mt-5">If a project requires more clinical information than the minimum data set, this must be stated
         clearly in the application, particularly if this is an essential component of the project. Any
         such project will normally be carried out as a collaboration with the Eastern European institute
         involved in collections of the samples and, where appropriate, approval of the relevant Ethical
