--- a/templates/ctb/researchers_page.html
+++ b/templates/ctb/researchers_page.html
@@ -46,15 +46,14 @@
         required to submit their research data back to the CTB.</p>
     <p>The CTB will normally correspond with researchers if their project addresses similar questions, or is
         likely to produce results that complement other studies. Projects which have used, or are using, CTB
-        materials are listed <span style="text-decoration: underline;"><a href="{% url 'research_projects' %}"
-                                                                          target="_blank" rel="noopener">here</a></span>.
+        materials are listed <a href="{% url 'research_projects' %}" target="_blank" rel="noopener">here</a>.
     </p>
-    <p>More information about the CTB is summarised in the Fact Sheet (click here for access to the <span
-            style="text-decoration: underline;"><a href="{% url 'fact_sheet' %}" target="_blank"
-                                                   rel="noopener">Fact Sheet</a></span>). Some useful links
+    <p>More information about the CTB is summarised in the Fact Sheet (click here for access to the <a
+            href="{% url 'fact_sheet' %}" target="_blank"
+            rel="noopener">Fact Sheet</a>). Some useful links
         to other organisations supporting thyroid cancer research or involved with tissue banking can be
-        found <span style="text-decoration: underline;"><a href="{% url 'useful_links' %}" target="_blank"
-                                                           rel="noopener">here</a></span>.</p>
+        found <a href="{% url 'useful_links' %}" target="_blank"
+                 rel="noopener">here</a>.</p>
 
 
 {% endblock %}
