--- a/static/css/style.css
+++ b/static/css/style.css
@@ -73,6 +73,16 @@ body {
     color: white;
 }
 
+main a, footer a, .nav-link{
+    text-decoration: none;
+    color: #4d6ea0;
+}
+
+.list-group-item-header{
+    color: white;
+    background-color: rgba(0, 0, 0, .5);
+}
+
 .btn-special {
     background-color: #6a4188;
     border: 1px solid #4f2f67;
