--- a/templates/ctb/about.html
+++ b/templates/ctb/about.html
@@ -3,37 +3,29 @@
 {% block content %}
     <div class="container">
         <div class="row">
-
-            <div class="col-md-9 pb-4">
+            <div class="col-lg-9 pb-4">
                 {% block subcontent %}
                 {% endblock %}
             </div>
-
-            <div class="col-md-3 pb-4">
-                <ul class="side-navigation">
-                    <li class="side-navigation__item side-navigation__item--heading">
-                        <a href="{% url 'about_project' %}" class="side-navigation__link  side-navigation__link--active">
-                            About the Project
-                        </a>
-                    </li>
-                    <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'aims_page' %}">
-                            Aims of the Project
-                        </a>
-                    </li>
-                    <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'fact_sheet' %}">
-                            Fact Sheet
-                        </a>
-                    </li>
-                    <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'management_page' %}">
-                            Management of the Project
-                        </a>
-                    </li>
-                </ul>
+            <div class="col-lg-3 pb-4">
+                <div class="list-group">
+                    <div class="list-group-item list-group-item-header">
+                        About
+                    </div>
+                    <a href="{% url 'about_project' %}" class="list-group-item list-group-item-action">
+                        About the Project
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'aims_page' %}">
+                        Aims of the Project
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'fact_sheet' %}">
+                        Fact Sheet
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'management_page' %}">
+                        Management of the Project
+                    </a>
+                </div>
             </div>
-
         </div>
     </div>
 {% endblock %}
