--- a/templates/ctb/podcasts_and_videos.html
+++ b/templates/ctb/podcasts_and_videos.html
@@ -28,10 +28,15 @@
 {% endblock %}
 
 {% block subcontent %}
-    <p><a title="Fallout: the legacy of Chernobyl " href="https://www.bbc.co.uk/programmes/b010mckx">Fallout:
-        the legacy of Chernobyl </a>A radio 4 programme by Nick Ross, broadcast in 2011 and featuring
-        members of the Scientific Advisory Board and Pathology Panel</p>
-    <p><a href="https://www.youtube.com/channel/UC6FfGVoE-V2ceMM6qreWa_Q">General Meeting of the National
+    <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+        <a class="fw-bold" title="Fallout: the legacy of Chernobyl " href="https://www.bbc.co.uk/programmes/b010mckx">Fallout:
+            the legacy of Chernobyl</a><br>A radio 4 programme by Nick Ross, broadcast in 2011 and featuring
+        members of the Scientific Advisory Board and Pathology Panel
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" href="https://www.youtube.com/channel/UC6FfGVoE-V2ceMM6qreWa_Q">General Meeting of
+        the National
         Academy of Medical Sciences of Ukraine, 14th April 2021</a><br>This meeting was held to mark the
         35th anniversary of the Chernobyl accident. The presentations are given in English and
         Ukrainian.<br>Academician Tronko presents on "Thyroid cancer in Ukraine after the Chornobyl
@@ -40,36 +45,64 @@
         accident" begins at 1:02:42<br>Professor Gerry Thomas presents on "The contribution of Ukraine to
         the Chernobyl Tissue Bank" begins at 1:31:05<br>Professor Stephen Chanock presents on "Radiation,
         genomic alterations in papillary thyroid carcinoma and transgenerational studies following the
-        Chernobyl accident" begins at 3:53:06</p>
-    <p><a href="https://therationalview.podbean.com/e/gerry-thomas-and-the-unscear-reports/">The Rational
-        View with Al Scott </a>&nbsp;Gerry Thomas and the UNSCEAR reports</p>
-    <p>
-        <a href="https://awnty.podbean.com/e/if-you-really-believe-insomethingstick-toit-professor-gerrythomas-director-ofthe-chernobyl-tissuebankandprofessorof-molecular-pathology-atimperial/">Are
-            we nearly there yet? </a>A podcast that includes the establishment of the CTB (Gerry Thomas)</p>
-    <p>
-        <a href="https://podcasts.apple.com/us/podcast/nuclear-accidents-scientific-consensus-feat-gerry-thomas/id1516526694?i=1000480650566">Decouple
-            A podcast on Nuclear Accidents and the Scientific Consensus</a> (Gerry Thomas)</p>
-    <p><a title="Titans of Nuclear" href="https://www.titansofnuclear.com/experts/gerrythomas">Titans of
-        Nuclear</a> A podcast on the Chernobyl accident, the CTB and health effects of nuclear accidents</p>
-    <p><a title="Misconceptions over Health Impacts of Nuclear Accidents"
-          href="https://www.youtube.com/watch?v=GCTHsXGbpfs">Misconceptions over Health Impacts of Nuclear
-        Accidents</a> An interview for the UN University</p>
-    <p><a title="Radiation Health Risks from Nuclear Accidents"
-          href="https://www.youtube.com/watch?v=pOvHxX5wMa8">Radiation Health Risks from Nuclear
-        Accidents</a> Facts and Fantasy Lecture at the Hawke Centre, University of South Australia in 2016
-    </p>
-    <p><a title="Radiation and Health Effects" href="https://www.youtube.com/watch?v=WGujhBImAvQ">Radiation
-        and Health Effects</a> Interview on Today, Radio 4 on the 5th anniversary of the Fukishima accident
-    </p>
-    <p><a title="Is Nuclear Safe?"
-          href="https://www.abc.net.au/radionational/programs/scienceshow/gerry-thomas-questions-our-fear-of-nuclear-power/11663622">Is
-        Nuclear Safe?</a> Interview on ABC's The Science Show with Robyn Williams</p>
-    <p><a title="Radiation and Health: Separating Scientific Facts from Urban Myths "
-          href="https://wwwf.imperial.ac.uk/blog/imperial-medicine/2019/12/09/radiation-and-human-health-separating-scientific-facts-from-urban-myths/">Radiation
-        and Health: Separating Scientific Facts from Urban Myths </a>Interview for Imperial's Three Wise
+        Chernobyl accident" begins at 3:53:06
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" href="https://therationalview.podbean.com/e/gerry-thomas-and-the-unscear-reports/">The
+        Rational
+        View with Al Scott </a><br>
+        Gerry Thomas and the UNSCEAR reports
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" href="https://awnty.podbean.com/e/if-you-really-believe-insomethingstick-toit-professor-gerrythomas-director-ofthe-chernobyl-tissuebankandprofessorof-molecular-pathology-atimperial/">Are
+            we nearly there yet?</a>
+        <br>A podcast that includes the establishment of the CTB (Gerry Thomas)
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" href="https://podcasts.apple.com/us/podcast/nuclear-accidents-scientific-consensus-feat-gerry-thomas/id1516526694?i=1000480650566">Decouple
+            A podcast on Nuclear Accidents and the Scientific Consensus</a>
+        <br>(Gerry Thomas)
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" title="Titans of Nuclear" href="https://www.titansofnuclear.com/experts/gerrythomas">
+            Titans of Nuclear</a><br>A podcast on the Chernobyl accident, the CTB and health effects of nuclear accidents
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" title="Misconceptions over Health Impacts of Nuclear Accidents"
+                                   href="https://www.youtube.com/watch?v=GCTHsXGbpfs">
+            Misconceptions over Health Impacts of Nuclear Accidents</a>
+        <br>An interview for the UN University
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" title="Radiation Health Risks from Nuclear Accidents"
+                                   href="https://www.youtube.com/watch?v=pOvHxX5wMa8">
+            Radiation Health Risks from Nuclear Accidents</a>
+        <br>Facts and Fantasy Lecture at the Hawke Centre, University of South Australia in 2016
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" title="Radiation and Health Effects"
+                                   href="https://www.youtube.com/watch?v=WGujhBImAvQ">
+            Radiation and Health Effects</a>
+        <br>Interview on Today, Radio 4 on the 5th anniversary of the Fukishima accident
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" title="Is Nuclear Safe?"
+                                   href="https://www.abc.net.au/radionational/programs/scienceshow/gerry-thomas-questions-our-fear-of-nuclear-power/11663622">
+            Is Nuclear Safe?</a>
+        <br>Interview on ABC's The Science Show with Robyn Williams
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" title="Radiation and Health: Separating Scientific Facts from Urban Myths "
+                                   href="https://wwwf.imperial.ac.uk/blog/imperial-medicine/2019/12/09/radiation-and-human-health-separating-scientific-facts-from-urban-myths/">Radiation
+        and Health: Separating Scientific Facts from Urban Myths </a>
+        <br>Interview for Imperial's Three Wise
         Women Christmas Blog 2019. Includes a link to 60 Minutes Australia programme Going Nuclear which
-        features Gerry Thomas and shows a sample from the CTB</p>
-    <p><a title="Why we shouldn't fear radiation "
-          href="https://www.imperial.ac.uk/news/195618/we-should-have-less-fear-radiation/">Why we shouldn't
-        fear radiation </a>Talk given in January 2020 for the Academic Health Science Centre at Imperial</p>
+        features Gerry Thomas and shows a sample from the CTB
+    </li>
+    <li class="list-group-item">
+        <a class="fw-bold" title="Why we shouldn't fear radiation "
+                                   href="https://www.imperial.ac.uk/news/195618/we-should-have-less-fear-radiation/">
+            Why we shouldn't fear radiation</a>
+        <br>Talk given in January 2020 for the Academic Health Science Centre at Imperial
+    </li>
 {% endblock %}
