--- a/templates/ctb/resources.html
+++ b/templates/ctb/resources.html
@@ -3,28 +3,25 @@
 {% block content %}
     <div class="container mb-5">
         <div class="row">
-            <div class="col-md-9 pb-4">
+            <div class="col-lg-9 pb-4">
                 {% block subcontent %}
                 {% endblock %}
             </div>
-            <div class="col-md-3 pb-4">
-                <ul class="side-navigation">
-                    <li class="side-navigation__item  side-navigation__link--active ">
-                        <a class="side-navigation__link" href="{% url 'bibliography' %}">
-                            Publications using CTB samples and data
-                        </a>
-                    </li>
-                    <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'useful_links' %}">
-                            Useful External Links
-                        </a>
-                    </li>
-                    <li class="side-navigation__item ">
-                        <a class="side-navigation__link" href="{% url 'podcasts_and_videos' %}">
-                            Useful Podcasts and Videos
-                        </a>
-                    </li>
-                </ul>
+            <div class="col-lg-3 pb-4">
+                <div class="list-group">
+                    <div class="list-group-item list-group-item-header">
+                        Resources
+                    </div>
+                    <a class="list-group-item list-group-item-action" href="{% url 'bibliography' %}">
+                        Publications using CTB samples and data
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'useful_links' %}">
+                        Useful External Links
+                    </a>
+                    <a class="list-group-item list-group-item-action" href="{% url 'podcasts_and_videos' %}">
+                        Useful Podcasts and Videos
+                    </a>
+                </div>
             </div>
         </div>
     </div>
